fix(iam.policies): add description
ref: MANAGER-11351
Signed-off-by: Yann Lojewski <yann.lojewski.ext@ovhcloud.com>

--- a/packages/manager/modules/iam/src/components/policies/policies.template.html
+++ b/packages/manager/modules/iam/src/components/policies/policies.template.html
@@ -1,4 +1,5 @@
 <div>
+    <p data-translate="iam_policies_description"></p>
     <oui-datagrid
         id="{{ $ctrl.datagridId }}"
         data-rows-loader="$ctrl.getItems($config)"
