--- a/packages/manager/modules/iam/src/components/resourceSelect/resourceSelect.template.html
+++ b/packages/manager/modules/iam/src/components/resourceSelect/resourceSelect.template.html
@@ -18,6 +18,7 @@
             data-on-confirm-remove="$ctrl.onResourceTypesConfirmRemove({ item, index })"
             data-on-error="$ctrl.onError(error)"
             data-required="$ctrl.isResourceTypesRequired"
+            data-disabled="$ctrl.readOnly"
         ></oui-select>
     </oui-field>
     <!-- </ResourceTypes> -->
