fix(iam): decode punycode resources
ref: MANAGER-11280
Signed-off-by: Yann Lojewski <yann.lojewski.ext@ovhcloud.com>

--- a/packages/manager/modules/iam/src/components/resourceSelect/resourceSelect.template.html
+++ b/packages/manager/modules/iam/src/components/resourceSelect/resourceSelect.template.html
@@ -17,6 +17,7 @@
             data-on-change="$ctrl.onResourceTypesChanged(modelValue)"
             data-on-confirm-remove="$ctrl.onResourceTypesConfirmRemove({ item, index })"
             data-on-error="$ctrl.onError(error)"
+            data-on-load="response.data.sort()"
             data-required="$ctrl.isResourceTypesRequired"
             data-disabled="$ctrl.readOnly"
         ></oui-select>
