--- a/packages/manager/core/generator/app/templates/package.json.hbs
+++ b/packages/manager/core/generator/app/templates/package.json.hbs
@@ -15,7 +15,10 @@
     "dev": "tsc && vite",
     "start": "lerna exec --stream --scope='{{ packageName }}' --include-dependencies -- npm run build --if-present",
     "start:dev": "lerna exec --stream --scope='{{ packageName }}' --include-dependencies -- npm run dev --if-present",
-    "start:watch": "lerna exec --stream --parallel --scope='{{ packageName }}' --include-dependencies -- npm run dev:watch --if-present"
+    "start:watch": "lerna exec --stream --parallel --scope='{{ packageName }}' --include-dependencies -- npm run dev:watch --if-present",
+    "test:e2e": "tsc && npx playwright test --headed",
+    "test:e2e:ci": "tsc && npx playwright test",
+    "test:e2e:script": "tsc && node ../../../../scripts/run-playwright.js"
   },
   "dependencies": {
     "@ovh-ux/manager-core-api": "*",
@@ -28,6 +31,7 @@
   "devDependencies": {
     "@ovh-ux/manager-vite-config": "*",
     "typescript": "^4.3.2",
+    "@playwright/test": "^1.34.3",
     "vite": "^3.0.2"
   },
   "peerDependencies": {
