--- a/packages/manager/modules/iam/src/components/resourceGroups/resourceGroups.template.html
+++ b/packages/manager/modules/iam/src/components/resourceGroups/resourceGroups.template.html
@@ -3,7 +3,7 @@
         id="{{ $ctrl.datagridId }}"
         data-rows-loader="$ctrl.getItems($config)"
         data-page="{{ $ctrl.cursors.index }}"
-        data-page-size="100"
+        data-page-size="{{ $ctrl.PAGE_SIZE }}"
         data-pagination-mode="arrows"
     >
         <!-- <Columns> -->
