fix(web): do not display selector if one version
ref: MANAGER-11496

Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/apps/web/client/app/components/hosting-domain-offers/template.html
+++ b/packages/manager/apps/web/client/app/components/hosting-domain-offers/template.html
@@ -42,8 +42,7 @@
             <!--Offer versions-->
             <oui-select
                 class="w-100"
-                data-ng-init="$ctrl.initSelectedVersion(offer)"
-                data-disabled="offer.versions.length <= 1"
+                data-ng-if="offer.versions.length > 1"
                 data-name="hosting-offer-version-{{modelValue.name}}"
                 data-items="offer.versions"
                 data-match="name"
