refactor(iam): kill services module
ref: MANAGER-11434
Signed-off-by: Yann Lojewski <yann.lojewski.ext@ovhcloud.com>

--- a/packages/manager/modules/iam/src/components/createPolicy/createPolicy.template.html
+++ b/packages/manager/modules/iam/src/components/createPolicy/createPolicy.template.html
@@ -119,7 +119,7 @@
                 >
                     <oui-select
                         data-disabled="!$ctrl.hasResourceGroups || $ctrl.policy.readOnly"
-                        data-load="{{:: $ctrl.url.resourceGroups }}"
+                        data-load="{{:: $ctrl.URL_RESOURCE_GROUP }}"
                         data-load-options="{ global: { serviceType: 'apiv2' } }"
                         data-match="name"
                         data-model="$ctrl.model.resourceGroups"
