fix(web): handle change offer event
ref: MANAGER-11495

Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/apps/web/client/app/components/hosting-domain-offers/template.html
+++ b/packages/manager/apps/web/client/app/components/hosting-domain-offers/template.html
@@ -48,6 +48,7 @@
                 data-match="name"
                 data-model="offer.selectedVersion"
                 data-placeholder="{{ 'web_components_hosting_domain_offers_offer_select_version_placeholder' | translate }}"
+                data-on-change="$ctrl.onOfferClick({offer})"
                 data-inline
             >
                 <span data-ng-bind=":: $item.selector"></span>
