--- a/packages/manager/modules/pci/src/components/project/billing/hourly-resource-list/template.html
+++ b/packages/manager/modules/pci/src/components/project/billing/hourly-resource-list/template.html
@@ -90,6 +90,15 @@
 </oui-collapsible>
 <oui-collapsible
     class="mx-0"
+    heading="{{ ::'cpbc_hourly_notebooks_title' | translate }} ({{ $ctrl.resources.totals.hourly.notebooks.toFixed(2) + ' ' + $ctrl.resources.totals.currencySymbol }})"
+>
+    <pci-billing-resource-usage
+        data-currency-symbol="$ctrl.resources.totals.currencySymbol"
+        data-resource-usage="$ctrl.resources.notebooks"
+    ></pci-billing-resource-usage>
+</oui-collapsible>
+<oui-collapsible
+    class="mx-0"
     data-ng-if="!$ctrl.isTrustedZone"
     heading="{{ ::'cpbc_hourly_ai_deploy_title' | translate }} ({{ $ctrl.resources.totals.hourly.aiDeploy.toFixed(2) + ' ' + $ctrl.resources.totals.currencySymbol }})"
 >
