feat(dedicated): licenses page display improvements
ref: MANAGER-11525
Signed-off-by: Jean-Baptiste Delon <jean-baptiste.delon@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/css/less/common/table.less
+++ b/packages/manager/apps/dedicated/client/app/css/less/common/table.less
@@ -58,6 +58,7 @@ table {
   }
 }
 
+.table-striped > div > .oui-datagrid > tbody > tr:nth-child(2n) > td,
 .table-striped > tbody > tr:nth-child(2n) > td,
 .table-striped > tbody > tr:nth-child(2n) > th {
   &:extend(.oui-background-p-050);
