feat(generator.v1): pim data in generator templates
ref: MANAGER-11443

Signed-off-by: Nicolas BAPTISTA <nicolas.baptista.ext@corp.ovh.com>

--- a/packages/manager/core/generator/app/conditional-templates/api/services-template-get.ts.hbs
+++ b/packages/manager/core/generator/app/conditional-templates/api/services-template-get.ts.hbs
@@ -1,5 +1,8 @@
 import { queryClient } from '@ovh-ux/manager-react-core-application';
 import { fetchIceberg, apiClient } from '@ovh-ux/manager-core-api';
+{{#if this.pimID}}
+import i18next from 'i18next';
+{{/if}}
 
 {{#if unknownTypeList}}
 {{#each unknownTypeList}}
@@ -47,3 +50,34 @@ export const getListingIceberg = async () => {
     return null;
   }
 }
+
+{{#if this.pimID}}
+export interface PIMElement {
+  id: number;
+  name: string;
+  description: string;
+  lang: string;
+  categories: string[];
+  regionTags: string[];
+}
+
+export const getPIMServiceQueryKey = [`/products/list`];
+
+/**
+ * Using the PIM ID `{{this.pimID}}` to search in PIM data model
+ */
+export const getPIMService = async (): Promise<string[]> => {
+  const fetchData = async () => {
+    const response = await apiClient.v6.get('/products/list');
+    const currentLang = i18next.language
+      ? i18next.language.replace('-', '_')
+      : 'fr_FR';
+    return response.data.filter(
+      (element: PIMElement) =>
+        element.id === {{this.pimID}} && element.lang === currentLang,
+    )[0];
+  };
+
+  return queryClient.fetchQuery(getPIMServiceQueryKey, fetchData);
+};
+{{/if}}
