feat(dedicated): enable modify bandwidth based on cluster type
ref: MANAGER-11514

Signed-off-by: sachinrameshn <sachin.ramesh@ovhcloud.com>

--- a/packages/manager/modules/nutanix/src/dashboard/component/network-tile/template.html
+++ b/packages/manager/modules/nutanix/src/dashboard/component/network-tile/template.html
@@ -51,7 +51,7 @@
                 <oui-button
                     data-variant="link"
                     data-icon-right="oui-icon-arrow-right"
-                    data-ng-if="$ctrl.privateBandwidthUpgradable && !$ctrl.loadingUpgradeOptions"
+                    data-ng-if="$ctrl.privateBandwidthUpgradable && !$ctrl.loadingUpgradeOptions && $ctrl.isOldCluster"
                     data-on-click="$ctrl.goToUpgradePrivateBandwidth()"
                 >
                     <span
