--- a/packages/manager/modules/iam/src/components/createResourceGroup/createResourceGroup.template.html
+++ b/packages/manager/modules/iam/src/components/createResourceGroup/createResourceGroup.template.html
@@ -1,4 +1,4 @@
-<div class="iam-create_policy">
+<div class="iam-create_resource_group">
     <iam-delete-entity
         data-ng-if="$ctrl.deletion"
         data-entity="{ data: $ctrl.deletion.data, type: $ctrl.ENTITY_RESOURCE_TYPE }"
@@ -8,24 +8,18 @@
         <strong
             class="d-block"
             data-ng-if="$ctrl.deletion.data.resources.length"
-            data-translate="iam_create_policy_deletion_resources_{{ $ctrl.deletion.data.resources.length > 1 ? 'many' : 'one' }}"
+            data-translate="iam_create_resource_group_deletion_resources_{{ $ctrl.deletion.data.resources.length > 1 ? 'many' : 'one' }}"
             data-translate-values="{ count : $ctrl.deletion.data.resources.length }"
-        ></strong>
-        <strong
-            class="d-block"
-            data-ng-if="$ctrl.deletion.data.actions.length"
-            data-translate="iam_create_policy_deletion_actions_{{ $ctrl.deletion.data.actions.length > 1 ? 'many' : 'one' }}"
-            data-translate-values="{ count : $ctrl.deletion.data.actions.length }"
         ></strong>
     </iam-delete-entity>
 
     <oui-header
         data-heading="{{ $ctrl.translations.header | translate }}"
-        data-description="{{ 'iam_create_policy_header_description' | translate }}"
+        data-description="{{ 'iam_create_resource_group_header_description' | translate }}"
     >
         <!-- <Guide> -->
         <oui-guide-menu
-            data-text="{{:: 'iam_create_policy_header_guide_text' | translate }}"
+            data-text="{{:: 'iam_create_resource_group_header_guide_text' | translate }}"
         >
             <oui-guide-menu-item
                 data-ng-repeat="guide in $ctrl.onboardingGuides track by $index"
@@ -58,12 +52,12 @@
         novalidate
     >
         <!-- <Name> -->
-        <h4 data-translate="iam_create_policy_form_name_heading"></h4>
+        <h4 data-translate="iam_create_resource_group_form_name_heading"></h4>
         <oui-field
-            data-label="{{:: 'iam_create_policy_form_name_heading' | translate }}"
+            data-label="{{:: 'iam_create_resource_group_form_name_heading' | translate }}"
             data-error-messages="{
                 api: $ctrl.error.name,
-                pattern: ('iam_create_policy_form_name_error_pattern' | translate)
+                pattern: ('iam_create_resource_group_form_name_error_pattern' | translate)
             }"
         >
             <input
@@ -72,7 +66,7 @@
                 type="text"
                 data-ng-model="$ctrl.model.name"
                 data-ng-pattern="$ctrl.ENTITY_NAME_PATTERN"
-                data-ng-disabled="$ctrl.policy.readOnly"
+                data-ng-disabled="$ctrl.resourceGroup.readOnly"
                 required
             />
         </oui-field>
@@ -83,68 +77,34 @@
             data-on-change="$ctrl.onResourceChanged(change)"
             data-on-error="$ctrl.onError(error)"
             data-on-resource-types-confirm-remove="$ctrl.onResourceTypesConfirmRemove(item, index)"
-            data-read-only="$ctrl.policy.readOnly"
-            data-resources-label="{{:: 'iam_create_policy_form_resources_heading' | translate }}"
+            data-read-only="$ctrl.resourceGroup.readOnly"
+            data-required="true"
+            data-resources-label="{{:: 'iam_create_resource_group_form_resources_heading' | translate }}"
             data-resources-model="$ctrl.model.resources"
             data-resources-name="resources"
-            data-resources-required-message="{{:: 'iam_create_policy_form_resources_error_required' | translate }}"
-            data-resource-types-label="{{:: 'iam_create_policy_form_resource_types_heading' | translate }}"
+            data-resources-required-message="{{:: 'iam_create_resource_group_form_resources_error_required' | translate }}"
+            data-resource-types-label="{{:: 'iam_create_resource_group_form_resource_types_heading' | translate }}"
             data-resource-types-model="$ctrl.model.resourceTypes"
             data-resource-types-name="resourceTypes"
         >
             <iam-resource-select-resource-types-header>
                 <h4
-                    data-translate="iam_create_policy_form_resource_types_heading"
+                    data-translate="iam_create_resource_group_form_resource_types_heading"
                 ></h4>
                 <p
-                    data-translate="iam_create_policy_form_resource_types_description"
+                    data-translate="iam_create_resource_group_form_resource_types_description"
                 ></p>
             </iam-resource-select-resource-types-header>
             <iam-resource-select-resources-header>
                 <h4
-                    data-translate="iam_create_policy_form_resources_heading"
+                    data-translate="iam_create_resource_group_form_resources_heading"
                 ></h4>
                 <p
-                    data-translate="iam_create_policy_form_resources_description"
+                    data-translate="iam_create_resource_group_form_resources_description"
                 ></p>
             </iam-resource-select-resources-header>
-            <iam-resource-select-resources-sibling>
-                <!-- <ResourceGroups> -->
-                <oui-field
-                    data-ng-class="{ 'no-margin': !$ctrl.hasResourceGroups }"
-                    data-label="{{:: 'iam_create_policy_form_resource_groups_heading' | translate }}"
-                    data-error-messages="{
-                        required: ('iam_create_policy_form_resources_error_required' | translate),
-                    }"
-                >
-                    <oui-select
-                        data-disabled="!$ctrl.hasResourceGroups || $ctrl.policy.readOnly"
-                        data-load="{{:: $ctrl.URL_RESOURCE_GROUP }}"
-                        data-load-options="{ global: { serviceType: 'apiv2' } }"
-                        data-match="name"
-                        data-model="$ctrl.model.resourceGroups"
-                        data-multiple="true"
-                        data-name="resourceGroups"
-                        data-on-load="$ctrl.onResourceGroupsLoaded(response.data)"
-                        data-on-error="$ctrl.onError(error)"
-                    ></oui-select>
-                </oui-field>
-                <!-- </ResourceGroups> -->
-            </iam-resource-select-resources-sibling>
         </iam-resource-select>
         <!-- </Resource> -->
-
-        <!-- <Actions> -->
-        <h4 data-translate="iam_create_policy_form_actions_heading"></h4>
-        <p data-translate="iam_create_policy_form_actions_description"></p>
-        <iam-action-select
-            data-error="$ctrl.onError(error)"
-            data-name="actions"
-            data-ng-model="$ctrl.model.actions"
-            data-resource-types="$ctrl.model.resourceTypes"
-            data-read-only="$ctrl.policy.readOnly"
-        ></iam-action-select>
-        <!-- </Actions> -->
 
         <!-- <Footer> -->
         <div class="d-flex align-items-center mb-5">
@@ -154,7 +114,7 @@
                 data-ng-disabled="$ctrl.isSubmitting"
                 data-ng-click="$ctrl.cancelCreation()"
             >
-                <span data-translate="iam_create_policy_cancel"></span>
+                <span data-translate="iam_create_resource_group_cancel"></span>
             </button>
             <button
                 type="submit"
