--- a/packages/manager/modules/carbon-calculator/src/index.scss
+++ b/packages/manager/modules/carbon-calculator/src/index.scss
@@ -3,3 +3,10 @@
 @import 'bootstrap4/scss/_mixins.scss';
 @import 'bootstrap4/scss/_utilities.scss';
 @import 'bootstrap4/scss/_grid.scss';
+
+.carbon-balance {
+  ul {
+    list-style-type: '- ';
+    @extend .pt-2;
+  }
+}
