--- a/packages/manager/core/generator/app/templates/package.json.hbs
+++ b/packages/manager/core/generator/app/templates/package.json.hbs
@@ -23,7 +23,11 @@
     "@tanstack/react-query": "^4.29.3",
     "react": "^18.2.0",
     "react-i18next": "^11.18.1",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "@ovhcloud/ods-core": "^13.0.1",
+    "@ovhcloud/ods-stencil": "^13.0.1",
+    "@ovhcloud/ods-theme-blue-jeans": "^13.0.1",
+    "@ovhcloud/ods-theming": "^13.0.1"
   },
   "devDependencies": {
     "@ovh-ux/manager-vite-config": "*",
