--- a/packages/manager/core/generator/app/conditional-templates/onboarding/index.tsx.hbs
+++ b/packages/manager/core/generator/app/conditional-templates/onboarding/index.tsx.hbs
@@ -1,12 +1,54 @@
 import React from 'react';
 import { useTranslation } from 'react-i18next';
+import { OnboardingLayout } from '../../components/OnboardingLayout';
+import { ManagerTile, ManagerTileType } from '../../components/ManagerTile';
+import onboardingImgSrc from './onboarding-img.png';
+import './index.scss';
 
+import Breadcrumb, { BreadcrumbHandleParams } from '@/components/Breadcrumb/Breadcrumb';
+
+export function breadcrumb({ params }: BreadcrumbHandleParams) {
+  return 'onboarding';
+}
 export default function Onboarding() {
   const { t } = useTranslation('{{appName}}/onboarding');
 
+  const tileList = [
+    {
+      title: t('guide1Title'),
+      description: t('guide1Description'),
+      href: t('guide1Link'),
+    },
+    {
+      title: t('guide2Title'),
+      description: t('guide2Description'),
+      href: t('guide2Link'),
+    },
+    {
+      title: t('guide3Title'),
+      description: t('guide3Description'),
+      href: t('guide3Link'),
+    },
+  ];
+
   return (
-    <div>
-      <h1>{t('title')}</h1>
-    </div>
+    <OnboardingLayout
+      title={t('title')}
+      imageSrc={onboardingImgSrc}
+      description={t('description')}
+      orderButtonLabel={t('orderButtonLabel')}
+      orderHref={t('orderButtonLink')}
+    >
+      <aside className="tile-grid">
+        {tileList.map((tile, index) => (
+          <ManagerTile
+            key={index}
+            tileType={ManagerTileType.tutorial}
+            moreLabel={t('guideFindOutMoreLinkLabel')}
+            {...tile}
+          />
+        ))}
+      </aside>
+    </OnboardingLayout>
   );
 }
