--- a/packages/manager/core/generator/app/conditional-templates/api/services-template-get.ts.hbs
+++ b/packages/manager/core/generator/app/conditional-templates/api/services-template-get.ts.hbs
@@ -29,7 +29,13 @@ export const {{this.functionName}}QueryKey = {{#if this.urlParams}}(params: {{pa
 {{/if}}
 export const {{this.functionName}} = async ({{#if this.params}}params: {{pascalCase this.functionName}}Params{{/if}}): Promise<{{this.responseType}}> => {
   const fetchData = async () => {
-    const response = await apiClient.v6.{{this.httpMethod}}({{#if this.urlParams}}`{{this.url}}`{{else}}'{{this.url}}'{{/if}}{{#if this.bodyParams}}, { data: params }{{/if}});
+    const response: any = await apiClient.v6.{{this.httpMethod}}({{#if this.urlParams}}`{{this.url}}`{{else}}'{{this.url}}'{{/if}}{{#if this.bodyParams}}, { data: params }{{/if}});
+    if (response?.code?.startsWith('ERR')) {
+      // Error in the request
+      const errorResponse = response.response;
+      console.error('Error with request', errorResponse);
+      return errorResponse;
+    }
     return response.data;
   };
 
