fix(pcc.vmware): tracking implementation
ref: MANAGER-11553

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/activation-status/activation-status.html
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/activation-status/activation-status.html
@@ -15,7 +15,7 @@
     </div>
     <div
         class="d-inline-block"
-        data-ng-repeat="datacenter in ::$ctrl.datacentersState track by index"
+        data-ng-repeat="datacenter in ::$ctrl.datacentersState track by $index"
     >
         <span
             class="oui-badge oui-badge_info"
