--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenter/dedicatedCloud-datacenter.html
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenter/dedicatedCloud-datacenter.html
@@ -100,9 +100,12 @@
     <oui-message class="mb-3" data-type="info" data-ng-if="$ctrl.newProductUrl">
         <span data-translate="dedicatedCloud_banner_new_product"></span>
         <a
-            data-ng-href="{{ $ctrl.newProductUrl }}"
+            data-ng-href="{{ :: $ctrl.newProductUrl }}"
             target="_blank"
             rel="noopener"
+            data-track-on="{{ :: $ctrl.TRACKING_NEW_PRODUCT_BANNER.on }}"
+            data-track-type="{{ :: $ctrl.TRACKING_NEW_PRODUCT_BANNER.type }}"
+            data-track-name="{{ :: $ctrl.TRACKING_NEW_PRODUCT_BANNER.name }}"
         >
             <span
                 data-translate="dedicatedCloud_banner_new_product_link"
