fix: pr comment
DATATR-283

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-image/app-image.html
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-image/app-image.html
@@ -81,14 +81,14 @@
             </oui-select-picker-section>
             <oui-select-picker-section>
                 <!--prices-->
-                <partner-preset-price
+                <pci-project-partner-preset-price
                     data-preset="preset"
                     data-type="'cpu'"
-                ></partner-preset-price>
-                <partner-preset-price
+                ></pci-project-partner-preset-price>
+                <pci-project-partner-preset-price
                     data-preset="preset"
                     data-type="'gpu'"
-                ></partner-preset-price>
+                ></pci-project-partner-preset-price>
             </oui-select-picker-section>
         </oui-select-picker>
     </div>
